data/forge_javadoc/1.7.10/raw/net/minecraft/stats/StatBase.md
---
title: "StatBase"
description: "public class StatBase extends java.lang.Object"
package: "net/minecraft/stats"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/stats/StatBase.html"
sourceType: javadoc
---

# StatBase

**Inheritance:** java.lang.Object → net.minecraft.stats.StatBase

## Class signature

```java
public class StatBase extends java.lang.Object
```

## Constructors

- `StatBase(java.lang.String p_i45308_1_, IChatComponent p_i45308_2_)`
- `StatBase(java.lang.String p_i45307_1_, IChatComponent p_i45307_2_, IStatType p_i45307_3_)`

## Methods

- `boolean equals(java.lang.Object p_equals_1_)`
- `IChatComponent func_150951_e()`
- `IScoreObjectiveCriteria func_150952_k()`
- `StatBase func_150953_b(java.lang.Class p_150953_1_)`
- `java.lang.Class func_150954_l()`
- `IChatComponent func_150955_j()`
- `java.lang.String func_75968_a(int p_75968_1_)`
- `int hashCode()`
- `StatBase initIndependentStat()`
- `boolean isAchievement()`
- `StatBase registerStat()`
- `java.lang.String toString()`

## Fields

- `static IStatType distanceStatType`
- `static IStatType field_111202_k`
- `boolean isIndependent`
- `static IStatType simpleStatType`
- `java.lang.String statId`
- `static IStatType timeStatType`
